# OpENer-lib

./: .clang-format  .gitignore  Jenkinsfile  OpENerLib.cbp  OpENerLib.depend  OpENerLib.layout  README.md  TODO  can.c  can.sh  main.cpp
source/: CMakeLists.txt  CMakeLists2.txt  CMakeListsbak.txt  main.cpp  opener.doxyfile
source/buildsupport/: OpENer.cmake  OpENer_CIP_Object_generator.cmake  OpENer_Tests.cmake  OpENer_function_checks.cmake  macros_and_definitions.cmake
source/buildsupport/POSIX/: OpENer_PLATFORM_INCLUDES.cmake
source/buildsupport/Toolchain/: Toolchain-EABI-ARM-Generic.cmake
source/buildsupport/WIN32/: OpENer_PLATFORM_INCLUDES.cmake
source/contrib/msinttypes/: inttypes.h
source/examples/: CMakeLists.txt  maintemplate.cpp
source/examples/ethIP/: CMakeLists.txt  slave_networkconfigured_expconn.cpp
source/ports/: CMakeLists.txt
source/ports/WIN32/: CMakeLists.txt  main.cpp
source/ports/WIN32/sample_application/: CMakeLists.txt  sampleapplication.cpp
source/src/: CMakeLists.txt  OpENer_ExplicitConnection.cpp  OpENer_ExplicitConnection.hpp  OpENer_IOConnection.cpp  OpENer_IOConnection.hpp  OpENer_Interface.cpp  OpENer_Interface.hpp  Opener_ExplicitConnection.cpp  Opener_ExplicitConnection.h  Opener_ExplicitConnection.hpp  Opener_IOConnection.cpp  Opener_IOConnection.h  Opener_IOConnection.hpp  Opener_Interface.cpp  Opener_Interface.h  Opener_Interface.hpp  main.cpp  opener_api.h  opener_user_conf.h  opener_user_conf.hpp  trace.h  trace.hpp  typedefs.h  typedefs.hpp
source/src/cip/: CIP_Analog_Input_Point.cpp  CIP_Analog_Input_Point.hpp  CIP_AppConnType.cpp  CIP_AppConnType.hpp  CIP_Appcontype.cpp  CIP_Appcontype.h  CIP_Appcontype.hpp  CIP_Assembly.cpp  CIP_Assembly.h  CIP_Assembly.hpp  CIP_Common.cpp  CIP_Common.hpp  CIP_CommonPacket.cpp  CIP_CommonPacket.h  CIP_ElectronicKey.cpp  CIP_ElectronicKey.hpp  CIP_EletronicKey.cpp  CIP_EletronicKey.h  CIP_Identity.cpp  CIP_Identity.h  CIP_Segment.cpp  CIP_Segment.h  CIP_Segment.hpp  CIP_Template.cpp  CIP_Template.h  CMakeLists.txt  Opener_ExplicitConnection.cpp  Opener_ExplicitConnection.h  Opener_IOConnection.cpp  Opener_IOConnection.h  Opener_Interface.cpp  Opener_Interface.h  appcontype.cpp  appcontype.h  cip_class.cpp  cip_class.h  cip_objects_class.cpp  cip_objects_class.h  cipassembly.cpp  cipassembly.h  (+25 more)
source/src/cip/CIP_Objects/: CIP_ClassStack.cpp  CIP_ClassStack.hpp  CIP_Object.cpp  CIP_Object.hpp  CIP_Objects.cpp  CIP_Objects.hpp  CMakeLists.txt
source/src/cip/CIP_Objects/CIP_0001_Identity/: CIP_Identity.cpp  CIP_Identity.hpp  CMakeLists.txt
source/src/cip/CIP_Objects/CIP_0002_MessageRouter/: CIP_MessageRouter.cpp  CIP_MessageRouter.hpp  CMakeLists.txt
source/src/cip/CIP_Objects/CIP_0003_DeviceNET/: CIP_DeviceNetLink.cpp  CIP_DeviceNetLink.hpp  CMakeLists.txt
source/src/cip/CIP_Objects/CIP_0004_Assembly/: CIP_Assembly.cpp  CIP_Assembly.hpp  CMakeLists.txt
source/src/cip/CIP_Objects/CIP_0005_Connection/: CIP_Connection.cpp  CIP_Connection.h  CIP_Connection.hpp  CIP_Connection_LinkConsumer.cpp  CIP_Connection_LinkConsumer.hpp  CIP_Connection_LinkProducer.cpp  CIP_Connection_LinkProducer.hpp  CMakeLists.txt
source/src/cip/CIP_Objects/template/: CIP_Attribute.cpp  (+11 more)
source/src/cip/class_stack/: CIP_Attribute.cpp  CIP_Attribute.h  CIP_Class.cpp  CIP_Class.h  CIP_ClassInstance.cpp  CIP_ClassInstance.h  CIP_Object.cpp  CIP_Object.h  CIP_Object.hpp  CIP_Service.cpp  CIP_Service.h  CIP_Template.cpp  CIP_Template.h  CMakeLists.txt
source/src/cip/connection/: CIP_Class3Connection.cpp  CIP_Class3Connection.hpp  CIP_CommonPacket.cpp  CIP_CommonPacket.hpp  CIP_Connection.cpp  CIP_Connection.hpp  CIP_IOConnection.cpp  CIP_IOConnection.hpp  CIP_Identity.cpp  CIP_Identity.hpp  CIP_MessageRouter.cpp  CIP_MessageRouter.hpp  CMakeLists.txt
source/src/cip/connection_stack/: CIP_Class3Connection.cpp  CIP_Class3Connection.h  CIP_Class3Connection.hpp  CIP_Common.cpp  CIP_Common.h  CIP_CommonPacket.cpp  CIP_CommonPacket.hpp  CIP_Connection.cpp  CIP_Connection.h  CIP_Connection.hpp  CIP_IOConnection.cpp  CIP_IOConnection.h  CIP_IOConnection.hpp  CIP_Identity.cpp  CIP_Identity.hpp  CIP_MessageRouter.cpp  CIP_MessageRouter.h  CIP_MessageRouter.hpp  CMakeLists.txt  cipclass3connection.cpp  cipclass3connection.h  cipcommon.cpp  cipcommon.h  cipconnectionmanager.cpp  cipconnectionmanager.h  cipioconnection.cpp  cipioconnection.h  cipmessagerouter.cpp  cipmessagerouter.h
source/src/cip/network_stack/: CIP_Network.cpp  CIP_Network.h  CMakeLists.txt  NET_Connection.cpp  NET_Connection.h  NET_Encapsulation.h  NET_NetworkHandler.cpp  NET_NetworkHandler.h  generic_networkhandler.cpp  generic_networkhandler.h  networkhandler.cpp  networkhandler.h
source/src/cip/template/: CIP_Attribute.hpp  CIP_Object_impl.hpp  CIP_Service.cpp  CIP_Service.hpp  CMakeLists.txt  cip_service.cpp
source/src/cip_objects/: CMakeLists.txt
source/src/dnet_encap/: dnet_conn_objects.c  dnet_conn_objects.cpp  dnet_encap.h  dnet_prot.cpp  dnet_prot.h
source/src/enet_encap/: CMakeLists.txt  eip_encap.c  eip_encap.cpp  eip_encap.h  eip_endianconv.c  eip_endianconv.cpp  eip_endianconv.h
source/src/ports/: CMakeLists.txt  generic_networkhandler.c  generic_networkhandler.cpp  generic_networkhandler.h
source/src/ports/POSIX/: CMakeLists.txt  main.c  main.cpp  networkhandler.c  networkhandler.cpp  networkhandler.h
source/src/ports/WIN32/: CMakeLists.txt  main.c  main.cpp  networkhandler.c  networkhandler.cpp  networkhandler.h
source/src/utils/: CMakeLists.txt  UTIL_Endianconv.cpp  UTIL_Endianconv.h  eletronicDatasheetUtilities.cpp  eletronicDatasheetUtilities.hpp  endianconv.c  endianconv.cpp  endianconv.h  random.c  random.cpp  random.h  random.hpp  xorshiftrandom.c  xorshiftrandom.cpp  xorshiftrandom.h  xorshiftrandom.hpp
source/tests/: CMakeLists.txt  CTestCustom.cmake  OpENerTests.cpp  OpENerTests.h
source/tests/cip/: CMakeLists.txt
source/tests/cip/CIP_Objects/: CMakeLists.txt
source/tests/enet_encap/: CMakeLists.txt  endianconvtest.cpp
source/tests/utils/: CMakeLists.txt  randomTests.cpp  xorshiftrandomtests.cpp
(+149 files in other folders)
