#######################################
# Add subdirectories                  #
#######################################
opENer_common_includes()

add_subdirectory( template )
add_subdirectory( CIP_0001_Identity      )
add_subdirectory( CIP_0002_MessageRouter )
add_subdirectory( CIP_0005_Connection    )
